--- a/locales/en.json
+++ b/locales/en.json
@@ -303,5 +303,6 @@
 	"Sign in with a different account": "Sign in with a different account",
 	"Stay signed in": "Stay signed in",
 	"Forgot password": "Forgot password",
-	"Sign in": "Sign in"
+	"Sign in": "Sign in",
+	"Create account": "Create account"	
 }
