--- a/locales/th.json
+++ b/locales/th.json
@@ -306,5 +306,5 @@
 	"Stay signed in": "คงอยู่ในระบบ",
 	"Forgot password": "ลืมรหัสผ่าน",
 	"Sign in": "ลงชื่อเข้าใช้",
-	"Hello": "Hello"	
+	"Create account": "สมัครสมาชิกใหม่"	
 }
