--- a/locales/en.json
+++ b/locales/en.json
@@ -304,5 +304,8 @@
 	"Stay signed in": "Stay signed in",
 	"Forgot password": "Forgot password",
 	"Sign in": "Sign in",
-	"Create account": "Create account"	
+	"Create account": "Create account",
+	"Mobile Phone Number": "Mobile Phone Number",
+	"Question": "Question",
+	"Answer": "Answer"
 }
