--- a/locales/th.json
+++ b/locales/th.json
@@ -306,5 +306,8 @@
 	"Stay signed in": "คงอยู่ในระบบ",
 	"Forgot password": "ลืมรหัสผ่าน",
 	"Sign in": "ลงชื่อเข้าใช้",
-	"Create account": "สมัครสมาชิกใหม่"	
+	"Create account": "สมัครสมาชิกใหม่",
+	"Mobile Phone Number": "เบอร์โทรศัพท์มือถือ",
+	"Question": "คำถาม",
+	"Answer": "คำตอบ"
 }
