--- a/locales/en.json
+++ b/locales/en.json
@@ -307,5 +307,6 @@
 	"Create account": "Create account",
 	"Mobile Phone Number": "Mobile Phone Number",
 	"Question": "Question",
-	"Answer": "Answer"
+	"Answer": "Answer",
+	"or": "or"
 }
