--- a/locales/th.json
+++ b/locales/th.json
@@ -309,5 +309,6 @@
 	"Create account": "สมัครสมาชิกใหม่",
 	"Mobile Phone Number": "เบอร์โทรศัพท์มือถือ",
 	"Question": "คำถาม",
-	"Answer": "คำตอบ"
+	"Answer": "คำตอบ",
+	"or": "หรือ"
 }
