--- a/locales/th.json
+++ b/locales/th.json
@@ -310,5 +310,9 @@
 	"Mobile Phone Number": "เบอร์โทรศัพท์มือถือ",
 	"Question": "คำถาม",
 	"Answer": "คำตอบ",
-	"or": "หรือ"
+	"or": "หรือ",
+	"Username already exists": "มีชื่อผู้ใช้นี้ในระบบแล้วค่ะ",
+	"Shop does not exist": "ไม่มีรหัสร้านค้านี้ในระบบค่ะ",
+	"Mobile phone number already exists": "เบอร์โทรศัพท์นี้มีในระบบแล้วค่ะ",
+	"Email already exists": "มีอีเมลนี้ในระบบแล้วค่ะ"
 }
