--- a/locales/en.json
+++ b/locales/en.json
@@ -312,5 +312,6 @@
 	"Username already exists": "Username already exists",
 	"Shop does not exist": "Shop does not exist",
 	"Mobile phone number already exists": "Mobile phone number already exists",
-	"Email already exists": "Email already exists"
+	"Email already exists": "Email already exists",
+	"Registration Successful": "Registration Successful"
 }
