--- a/locales/th.json
+++ b/locales/th.json
@@ -315,5 +315,6 @@
 	"Shop does not exist": "ไม่มีรหัสร้านค้านี้ในระบบค่ะ",
 	"Mobile phone number already exists": "มีเบอร์โทรศัพท์นี้ในระบบแล้วค่ะ",
 	"Email already exists": "มีอีเมลนี้ในระบบแล้วค่ะ",
-	"Registration Successful": "สมัครสมาชิกเรียบร้อยแล้วค่ะ"
+	"Registration Successful": "สมัครสมาชิกเรียบร้อยแล้วค่ะ",
+	"Invalid Username or Password": "ชื่อผู้ใช้ หรือ รหัสผ่าน ไม่ถูกต้องค่ะ"
 }
